<resources>
    <string name="app_name">Illumination</string>
    <string name="login">Log In</string>
    <string name="username">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="signUp_text">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="createAccount">Create Account</string>
    <string name="viewBook">Click for More Information</string>
    <string name="filter">Search Books</string>
    <string name="view_description">View Description</string>
    <string name="heading">Bestsellers</string>
    <string name="empty">""</string>
    <string name="rateBook">"Rate It"</string>
    <string name="bookDescription">"BOOK DESCRIPTION"</string>
    <string name="add_to_cart">"ADD TO CART"</string>
    <string name="home">Home</string>
    <string name="advSearch">Advanced Search</string>
    <string name="logOut">Log Out</string>
    <string name="cartOption">View Cart</string>
    <string name="homeOption">Home</string>
    <string name="editAccount">Edit Account</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="accountSetting">Account Settings</string>
    <string name="quantity">Quantity</string>
    <string name="place_order">Place Order</string>
    <string name="footer">"TO BE INVOLVED WITH BOOKS IS TO LIVE AT THE HEART OF LIGHT"</string>
    <string name="bookReview">Book Review</string>
    <string name="addReview">Write A Review</string>
    <string name="viewReviews">View Book Reviews</string>
    <string name="submit">Done</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="items">Items</string>
    <string name="cancel">Cancel</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Order Details</string>
    <string name="no_order_history">No Order History</string>
</resources>
