<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F5DC"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5DC"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginLeft="60sp"
                android:layout_marginTop="20sp"
                android:contentDescription="@string/empty"
                android:src="@drawable/logo"
                android:layout_marginStart="60sp">
            </ImageView>

        <TextView
            android:id="@+id/appTitle"
            android:layout_marginTop="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_marginLeft="10sp"
            android:focusable="false"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:layout_marginStart="10sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints=""
            android:backgroundTint="@android:color/holo_orange_dark" tools:targetApi="lollipop">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:autofillHints=""
                android:backgroundTint="@android:color/holo_orange_dark"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textSize="20sp"
                tools:targetApi="lollipop">
            </EditText>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/show_password_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:alpha=".5"
                    android:layout_gravity="end"
                    android:onClick="ShowAndHidePassword"
                    android:padding="5dp"
                    android:layout_marginTop="20sp"
                    android:src="@drawable/show_password"
                    android:contentDescription="@string/empty" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:background="@drawable/login_signup_button">
        </Button>

        <TextView
            android:id="@+id/accountCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90sp"
            android:text="@string/signUp_text"
            android:textSize="20sp"
            android:layout_gravity="center">
        </TextView>

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:background="@drawable/login_signup_button">
        </Button>

    </LinearLayout>

</ScrollView>