<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5DC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5DC"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:layout_gravity="center"
            android:layout_marginTop="50sp">
        </ImageView>

        <TextView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#A0522D">
        </TextView>

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#D2691E">
        </TextView>

        <TextView
            android:id="@+id/rate_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/rateBook"
            android:textColor="#000000">
        </TextView>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleIndicator"
            android:numStars="5"
            android:stepSize="1"
            android:isIndicator="false"
            android:layout_marginTop="10sp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="#A0522D"
            android:textSize="15sp">
        </TextView>

        <Button
            android:id="@+id/buyBook"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:text="@string/add_to_cart"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:theme="@style/AppTheme1.Button"/>

        <Button
            android:id="@+id/viewReviews"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:padding="15dp"
            android:text="@string/viewReviews"
            android:textColor="#000000"
            android:textSize="17sp"
            android:theme="@style/AppTheme2.Button" />

        <TextView
            android:id="@+id/heading_bookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"
            android:text="@string/bookDescription"
            android:textColor="#000000">
        </TextView>

        <TextView
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textSize="20sp"
            android:textColor="#000000">
        </TextView>

    </LinearLayout>

</ScrollView>